Add update and delete url actions
