# src/requests/apiv1/urlrequest.go
@@ -1,6 +1,6 @@
 package apiv1
 
-type UpdateUrlRequest struct {
+type UrlRequest struct {
 	Label       string `form:"label" binding:"required"`
 	Destination string `form:"destination" binding:"required"`
 }
